--- a/packages/khoj-twitter-bot/package.json
+++ b/packages/khoj-twitter-bot/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/tattle-made/services-js/issues"
   },
-  "homepage": "https://github.com/tattle-made/services-js#readme"
+  "homepage": "https://github.com/tattle-made/services-js#readme",
+  "dependencies": {
+    "twit": "^2.2.11"
+  }
 }
